feat : add AutoRemote RDB Entities, refac remote.code and remote.autoremote domain